;;;; -*- coding: utf-8; -*-
changes in sbcl-0.9.14 relative to sbcl-0.9.13:
  * feature: thread support on Solaris/x86, and experimental thread support
    on OS X/x86.
  * minor incompatible change: prevent the user from specializing the
    new-value argument to SB-MOP:SLOT-VALUE-USING-CLASS.  It's
    somewhat counter to the intent of the protocol, I (CSR) think, and
    additionally it just doesn't work in SBCL as currently
    implemented, thanks to optimizations (that are always valid for
    the other three SLOT-VALUEish functions, but not for the setter).
  * bug fix: unparsing logical pathnames with :NAME :WILD :TYPE NIL
    failed with a type error.  (reported by Pascal Bourguignon)
  * bug fix: merging pathnames against defaults with :DIRECTORY
    starting with '(:RELATIVE :BACK) should preserve the :BACK.
    (reported by James Y Knight)
  * improved SB-BSD-SOCKETS support on Windows. (thanks to Timothy
    Ritchey)
  * bug fix: saving large (>2GB) cores on x86-64 now works
  * bug fix: a x86-64 backend bug when compiling (setf aref) with a 
    constant index and a (simple-array (signed-byte 32)) array
  * bug fix: NAME-CHAR on an invalid symbol no longer signals an
    error (patch by Robert J. Macomber)
  * feature: TIME now displays the amount of run-time spent in GC
  * fixed some bugs revealed by Paul Dietz' test suite:
    ** MISC.641: LET-conversion were not supposed to work in late
       compilation stages.

changes in sbcl-0.9.13 relative to sbcl-0.9.12:
  * new feature: source path information is generated for macro-expansion
    errors for use in IDE's like Slime (thanks to Helmut Eller)
  * bug fix: calls to the compiler no longer modify *RANDOM-STATE*
  * bug fix: compiler does not loop forever on an invalid type in
    TYPEP.
  * improvement: compilation of most CLOS applications is significantly
    faster
  * optimization: added a limited bytecode compiler for simple toplevel
    forms, speeding up compilation and FASL loading
