@@ -1171,7 +1171,7 @@ is a good idea, but see SB-SYS re. blurring of boundaries."
                "*CURRENT-LEVEL-IN-PRINT*"
                "*EMPTY-TYPE*" "*GC-INHIBIT*" "*GC-PENDING*"
                #!+sb-thread "*STOP-FOR-GC-PENDING*"
-               "*CONTROL-STACK-EXHAUSTION-SAP*" "*UNIVERSAL-TYPE*"
+               "*UNIVERSAL-TYPE*"
                "*UNIVERSAL-FUN-TYPE*" "*UNPARSE-FUN-TYPE-SIMPLIFY*"
                "*WILD-TYPE*" "WORD-LOGICAL-AND" "WORD-LOGICAL-ANDC1"
                "WORD-LOGICAL-ANDC2" "WORD-LOGICAL-EQV"
